# build_tools

./: CMakeLists.txt  README.md  conanfile.py  sonar-project.properties
cmake/: ts_app.cmake  win32_executable.cmake  win32_library.cmake
